# my-mcp-test

./: client.py  main.py  pyproject.toml  sse_client.py  sse_server.py
