[project]
name = "my-mcp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.52.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sseclient-py>=1.8.0",
    "uvicorn>=0.34.3",
]
